[code] used schedule service proto and changed accordingly
