# proto/TileService.swagger.json
@@ -54,7 +54,7 @@
           "200": {
             "description": "A successful response.(streaming responses)",
             "schema": {
-              "$ref": "#/x-stream-definitions/Cw_TileServiceContentTile"
+              "$ref": "#/x-stream-definitions/SchedularServiceContent"
             }
           }
         },
@@ -250,45 +250,6 @@
       },
       "title": "Prime Pages"
     },
-    "Cw_TileServiceContentTile": {
-      "type": "object",
-      "properties": {
-        "title": {
-          "type": "string"
-        },
-        "mediaUrl": {
-          "type": "string"
-        },
-        "tileType": {
-          "$ref": "#/definitions/Cw_TileServiceTileType"
-        },
-        "poster": {
-          "type": "string"
-        },
-        "portrait": {
-          "type": "string"
-        },
-        "isDetailPage": {
-          "type": "boolean",
-          "format": "boolean"
-        },
-        "packageName": {
-          "type": "string"
-        },
-        "contentId": {
-          "type": "string"
-        },
-        "target": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "realeaseDate": {
-          "type": "string"
-        }
-      }
-    },
     "Cw_TileServicePage": {
       "type": "object",
       "properties": {
@@ -347,15 +308,69 @@
         "contentBaseUrl": {
           "type": "string"
         },
-        "contentTiles": {
+        "content": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Cw_TileServiceContentTile"
+            "$ref": "#/definitions/SchedularServiceContent"
           }
         }
       }
     },
-    "Cw_TileServiceTileType": {
+    "SchedularServiceContent": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "poster": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "portrait": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "type": {
+          "$ref": "#/definitions/SchedularServiceTileType"
+        },
+        "isDetailPage": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "contentId": {
+          "type": "string"
+        },
+        "play": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SchedularServicePlay"
+          }
+        },
+        "video": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      },
+      "title": "new schema"
+    },
+    "SchedularServicePlay": {
+      "type": "object",
+      "properties": {
+        "package": {
+          "type": "string"
+        },
+        "target": {
+          "type": "string"
+        }
+      }
+    },
+    "SchedularServiceTileType": {
       "type": "string",
       "enum": [
         "ImageTile",
@@ -365,7 +380,7 @@
         "CarouselTile"
       ],
       "default": "ImageTile",
-      "title": "Row Request"
+      "title": "contentTile"
     },
     "protobufAny": {
       "type": "object",
@@ -406,17 +421,17 @@
     }
   },
   "x-stream-definitions": {
-    "Cw_TileServiceContentTile": {
+    "SchedularServiceContent": {
       "type": "object",
       "properties": {
         "result": {
-          "$ref": "#/definitions/Cw_TileServiceContentTile"
+          "$ref": "#/definitions/SchedularServiceContent"
         },
         "error": {
           "$ref": "#/definitions/runtimeStreamError"
         }
       },
-      "title": "Stream result of Cw_TileServiceContentTile"
+      "title": "Stream result of SchedularServiceContent"
     }
   }
 }
